feat: modified add workout page

--- a/server/app/templates/add-workout.html
+++ b/server/app/templates/add-workout.html
@@ -9,9 +9,7 @@
       href="../static/favicon.ico"
       type="image/x-icon"
     />
-    <link href="../static/css/tailwind.css" rel="stylesheet" />
     <link href="../static/css/toasts.css" rel="stylesheet" />
-    <link href="../static/css/main.css" rel="stylesheet" />
     <link href="../static/css/style.css" rel="stylesheet" />
 
     <script src="../static/js/toasts.js" type="text/javascript"></script>
@@ -20,7 +18,7 @@
 
   <body>
     <!-- EDIT WORKOUT PAGE START HRERE -->
-    <section class="edit-workout-page">
+    <section class="edit-workout-page" id="edit-workout-page">
       <div>
         <div class="container">
           <div class="top-part-wrap">
@@ -37,19 +35,24 @@
               <h5>Название тенировки</h5>
               <div class="text-edit-wrap">
                 <div class="edit-wrapper">
-                  <input type="text" />
+                  <input type="text" id="workout-name" />
                   <div class="edit-pen">
                     <img src="../static/images/edit-pen.svg" alt="" />
                   </div>
                 </div>
               </div>
             </div>
-            <div class="edit-box">
+            <div class="edit-box" id="edit-box">
               <h5>Список упражнений</h5>
               <div class="text-edit-wrap">
-                <div class="list-exercise">
+                <div
+                  class="list-exercise"
+                  id="add-exercise-btn"
+                  style="cursor: pointer"
+                  onclick="showPage('workout-page')"
+                >
                   <img src="../static/images/plus.svg" alt="" />
-                  <h4>Упражнение</h4>
+                  Упражнение
                 </div>
               </div>
             </div>
@@ -67,6 +70,143 @@
         </div>
       </div>
     </section>
-    <!-- ADD WORKOUT PAGE END HRERE -->
+    <!-- EDIT WORKOUT PAGE END HRERE -->
+
+    <!-- WORKOUT PAGE START HERE -->
+    <section class="workout-page" id="workout-page" style="display: none">
+      <div class="container">
+        <div class="top-part-wrap">
+          <div
+            class="back-btn"
+            id="return-to-edit-workout-btn"
+            style="cursor: pointer"
+            onclick="showPage('edit-workout-page')"
+          >
+            <img src="../static/images/angle-left.svg" alt="angle-arrow" />
+            <h3>Назад</h3>
+          </div>
+          <div class="logo-wrap">
+            <img src="../static/images/purple-logo.svg" alt="logo" />
+          </div>
+        </div>
+        <div class="topic">
+          <h3>Упражнения</h3>
+        </div>
+        <div class="workout-name-wraps mt-60" id="workout-container">
+          <div class="workout-card new">
+            <img
+              src="../static/images/exercise-1.png"
+              alt=""
+              class="exercise-img"
+            />
+            <h4>Велосипед</h4>
+            <img src="../static/images/add-btn.svg" alt="" />
+            <div class="exercise-popup-wraps">
+              <div class="exercise-pop-wrapper">
+                <h4>Велосипед</h4>
+                <div class="workout">
+                  <img src="../static/images/exercise-1.png" alt="" />
+                </div>
+                <div class="timer-count">
+                  <div class="plus-minus">
+                    <img src="../static/images/minus.svg" alt="" />
+                  </div>
+                  <div class="timer-wraps">
+                    <span>0:10</span>
+                  </div>
+                  <div class="plus-minus">
+                    <img src="../static/images/plus.svg" alt="" />
+                  </div>
+                </div>
+                <div class="flex align-center add-flex gap-20">
+                  <button class="btn">Добавить</button>
+                  <div class="cross">
+                    <img src="../static/images/cross.svg" alt="" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="workout-card new">
+            <img
+              src="../static/images/exercise-1.png"
+              alt=""
+              class="exercise-img"
+            />
+            <h4>Планка</h4>
+            <img src="../static/images/add-btn.svg" alt="" />
+            <div class="exercise-popup-wraps">
+              <div class="exercise-pop-wrapper">
+                <h4>Планка</h4>
+                <div class="workout">
+                  <img src="../static/images/plank.png" alt="" />
+                </div>
+                <div class="timer-count">
+                  <div class="plus-minus">
+                    <img src="../static/images/minus.svg" alt="" />
+                  </div>
+                  <div class="timer-wraps">
+                    <span>0:10</span>
+                  </div>
+                  <div class="plus-minus">
+                    <img src="../static/images/plus.svg" alt="" />
+                  </div>
+                </div>
+                <div class="flex align-center add-flex gap-20">
+                  <button class="btn">Добавить</button>
+                  <div class="cross">
+                    <img src="../static/images/cross.svg" alt="" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="workout-card new">
+            <img
+              src="../static/images/exercise-1.png"
+              alt=""
+              class="exercise-img"
+            />
+            <h4>Берпи</h4>
+            <img src="../static/images/add-btn.svg" alt="" />
+            <div class="exercise-popup-wraps">
+              <div class="exercise-pop-wrapper">
+                <h4>Берпи</h4>
+                <div class="workout">
+                  <img src="../static/images/burpee.png" alt="" />
+                </div>
+                <div class="timer-count">
+                  <div class="plus-minus">
+                    <img src="../static/images/minus.svg" alt="" />
+                  </div>
+                  <div class="timer-wraps">
+                    <span>0:10</span>
+                  </div>
+                  <div class="plus-minus">
+                    <img src="../static/images/plus.svg" alt="" />
+                  </div>
+                </div>
+                <div class="flex align-center add-flex gap-20">
+                  <button class="btn">Добавить</button>
+                  <div class="cross">
+                    <img src="../static/images/cross.svg" alt="" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="btn-wraps">
+          <button class="btn">Назад</button>
+        </div>
+      </div>
+    </section>
+    <!-- WORKOUT PAGE END HERE -->
+
+    <script>
+      var exercises = {{ exercises|tojson }};
+    </script>
+
+    <script src="../static/js/addWorkout.js" type="text/javascript"></script>
   </body>
 </html>
