feat: added forget password static

--- a/server/app/templates/add-workout.html
+++ b/server/app/templates/add-workout.html
@@ -22,7 +22,11 @@
       <div>
         <div class="container">
           <div class="top-part-wrap">
-            <div class="back-btn">
+            <div
+              class="back-btn"
+              style="cursor: pointer"
+              onclick="window.location.href = '/dashboard';"
+            >
               <img src="../static/images/angle-left.svg" alt="angle-arrow" />
               <h3>Назад</h3>
             </div>
