--- a/server/app/templates/login.html
+++ b/server/app/templates/login.html
@@ -72,7 +72,7 @@
               <button class="btn" id="submit">Войти</button>
             </div>
             <div class="account-check-wrap">
-              <a href="">Забыл пароль?</a>
+              <a href="/forget-password">Забыл пароль?</a>
               <a href="/register">Зарегистрироваться</a>
             </div>
           </div>
