--- a/server/app/templates/forget-password.html
+++ b/server/app/templates/forget-password.html
@@ -9,13 +9,10 @@
       href="../static/favicon.ico"
       type="image/x-icon"
     />
-    <link href="../static/css/tailwind.css" rel="stylesheet" />
     <link href="../static/css/toasts.css" rel="stylesheet" />
-    <link href="../static/css/main.css" rel="stylesheet" />
     <link href="../static/css/style.css" rel="stylesheet" />
 
     <script src="../static/js/toasts.js" type="text/javascript"></script>
-    <script src="../static/js/lib.js"></script>
   </head>
 
   <body>
@@ -24,7 +21,11 @@
       <div class="top-logo-part">
         <div class="container">
           <div class="top-part-wrap">
-            <div class="back-btn">
+            <div
+              class="back-btn"
+              onclick="window.location.href = '/login';"
+              style="cursor: pointer"
+            >
               <img src="./static/images/angle-left.svg" alt="angle-arrow" />
               <h3>Назад</h3>
             </div>
@@ -53,27 +54,35 @@
             </h6>
           </div>
           <div class="form-part mt-45">
-            <form action="">
-              <div class="white-form">
-                <div class="flex-column gap-20">
-                  <div class="input-wraps">
-                    <label for="">Email или телефон</label>
-                    <input type="text" placeholder="example@gmail.com" />
-                  </div>
-                </div>
-                <div class="check-wrap">
-                  <input type="checkbox" name="" id="" />
-                  <span>Согласие на обработку персональных данных</span>
+            <div class="white-form">
+              <div class="flex-column gap-20">
+                <div class="input-wraps">
+                  <label for="email">Email или телефон</label>
+                  <input
+                    type="text"
+                    id="email"
+                    placeholder="example@gmail.com"
+                  />
                 </div>
               </div>
-              <div class="btn-wrap">
-                <button class="btn">Восстановить пароль</button>
+              <div class="check-wrap">
+                <input type="checkbox" id="tos-agreement" checked />
+                <span>Согласие на обработку персональных данных</span>
               </div>
-            </form>
+            </div>
+            <div class="btn-wrap">
+              <button class="btn" id="submit">Восстановить пароль</button>
+            </div>
           </div>
         </div>
       </div>
     </section>
     <!-- LOGIN PAGE START HERE -->
+
+    <script
+      src="../static/js/forgetPassword.js"
+      type="text/javascript"
+      defer
+    ></script>
   </body>
 </html>
