feat: static add exercise page

--- a/server/app/templates/add-workout.html
+++ b/server/app/templates/add-workout.html
@@ -201,7 +201,13 @@
           </div>
         </div>
         <div class="btn-wraps">
-          <button class="btn">Назад</button>
+          <button
+            class="btn"
+            style="cursor: pointer"
+            onclick="showPage('edit-workout-page')"
+          >
+            Назад
+          </button>
         </div>
       </div>
     </section>
