--- a/server/app/templates/add-workout.html
+++ b/server/app/templates/add-workout.html
@@ -66,7 +66,9 @@
       <div class="save-wrorkout-wrap">
         <div class="container">
           <div class="save-wrapper">
-            <button class="btn">Сохранить тренировку</button>
+            <button class="btn" id="add-workout-submit">
+              Сохранить тренировку
+            </button>
             <div class="plus-wrap">
               <img src="../static/images/plus.svg" alt="" />
             </div>
