feat: better user interactivity

--- a/server/app/templates/add-workout.html
+++ b/server/app/templates/add-workout.html
@@ -55,7 +55,7 @@
                   style="cursor: pointer"
                   onclick="showPage('workout-page')"
                 >
-                  <img src="../static/images/plus.svg" alt="" />
+                  <img src="../static/images/plus.svg" alt="Add exercise" />
                   Упражнение
                 </div>
               </div>
@@ -70,7 +70,12 @@
               Сохранить тренировку
             </button>
             <div class="plus-wrap">
-              <img src="../static/images/plus.svg" alt="" />
+              <img
+                src="../static/images/plus.svg"
+                onclick="showPage('workout-page')"
+                style="cursor: pointer"
+                alt=""
+              />
             </div>
           </div>
         </div>
