feat: static workouts page

--- a/server/app/templates/dashboard.html
+++ b/server/app/templates/dashboard.html
@@ -100,7 +100,7 @@
           <a href="/workouts/new">
             <button class="btn">Создать свою тренировку</button>
           </a>
-          <a href="">
+          <a href="/workouts">
             <button class="btn">Мои тренировки</button>
           </a>
         </div>
