--- a/server/app/templates/workouts.html
+++ b/server/app/templates/workouts.html
@@ -3,180 +3,138 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Workout</title>
+    <title>Workouts</title>
     <link
       rel="shortcut icon"
       href="../static/favicon.ico"
       type="image/x-icon"
     />
-    <script src="../static/js/lib.js"></script>
-    <link href="../static/css/main.css" rel="stylesheet" />
-    <link href="../static/css/tailwind.css" rel="stylesheet" />
-    <link rel="stylesheet" href="../static/assets/css/style.css" />
+    <link href="../static/css/style.css" rel="stylesheet" />
+
+    <script src="../static/js/lib.js" type="text/javascript"></script>
   </head>
 
   <body>
-    <script>
-      (async () => {
-        await authFlow(null, "/login");
-
-        let accessToken = localStorage.getItem("access_token");
-        let { res, data } = await getUser(accessToken);
-        if (res.status === 401) {
-          window.location.href = "/login";
-        }
-      })();
-    </script>
-
     <!-- WORKOUT PAGE START HERE -->
     <section class="workout-page">
       <div class="container">
-        <div class="workout-name-wraps mt-60">
-          <div id="exercises">
-            <h3 class="flex items-center justify-center">Тренировки</h3>
-            <!-- Exercises will show here -->
+        <div class="number-list-wrapper">
+          <h3>Тренировки</h3>
+          <div class="workout-number-list">
+            <div class="workout-card">
+              <h4>Тренировка № 1</h4>
+              <img src="../static/images/gradient-arrow.svg" alt="" />
+            </div>
+            <div class="workout-card">
+              <h4>Тренировка № 2</h4>
+              <img src="../static/images/gradient-arrow.svg" alt="" />
+            </div>
           </div>
-
-          <div id="workouts">
-            <h3 class="flex items-center justify-center mt-60">
-              Свои тренировки
-            </h3>
-            <!-- Workouts will show here -->
+        </div>
+        <div class="number-list-wrapper mt-45">
+          <h3>Свои тренировки</h3>
+          <div class="workout-number-list">
+            <div class="workout-card">
+              <h4>Моя тренировка № 1</h4>
+              <img src="../static/images/gradient-arrow.svg" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="workout-name-wraps mt-60">
+          <div class="workout-card">
+            <h4>Приседания</h4>
+            <img src="../static/images/gradient-arrow.svg" alt="" />
+            <div class="exercise-popup-wraps">
+              <div class="exercise-pop-wrapper">
+                <h4>Приседания</h4>
+                <div class="workout">
+                  <img src="../static/images/squat.png" alt="" />
+                </div>
+                <div class="timer-count">
+                  <div class="plus-minus">
+                    <img src="../static/images/minus.svg" alt="" />
+                  </div>
+                  <div class="timer-wraps">
+                    <span>0:10</span>
+                  </div>
+                  <div class="plus-minus">
+                    <img src="../static/images/plus.svg" alt="" />
+                  </div>
+                </div>
+                <div class="flex align-center add-flex gap-20">
+                  <button class="btn">Добавить</button>
+                  <div class="cross">
+                    <img src="../static/images/cross.svg" alt="" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="workout-card">
+            <h4>Планка</h4>
+            <img src="../static/images/gradient-arrow.svg" alt="" />
+            <div class="exercise-popup-wraps">
+              <div class="exercise-pop-wrapper">
+                <h4>Планка</h4>
+                <div class="workout">
+                  <img src="../static/images/plank.png" alt="" />
+                </div>
+                <div class="timer-count">
+                  <div class="plus-minus">
+                    <img src="../static/images/minus.svg" alt="" />
+                  </div>
+                  <div class="timer-wraps">
+                    <span>0:10</span>
+                  </div>
+                  <div class="plus-minus">
+                    <img src="../static/images/plus.svg" alt="" />
+                  </div>
+                </div>
+                <div class="flex align-center add-flex gap-20">
+                  <button class="btn">Добавить</button>
+                  <div class="cross">
+                    <img src="../static/images/cross.svg" alt="" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="workout-card">
+            <h4>Берпи</h4>
+            <img src="../static/images/gradient-arrow.svg" alt="" />
+            <div class="exercise-popup-wraps">
+              <div class="exercise-pop-wrapper">
+                <h4>Берпи</h4>
+                <div class="workout">
+                  <img src="../static/images/burpee.png" alt="" />
+                </div>
+                <div class="timer-count">
+                  <div class="plus-minus">
+                    <img src="../static/images/minus.svg" alt="" />
+                  </div>
+                  <div class="timer-wraps">
+                    <span>0:10</span>
+                  </div>
+                  <div class="plus-minus">
+                    <img src="../static/images/plus.svg" alt="" />
+                  </div>
+                </div>
+                <div class="flex align-center add-flex gap-20">
+                  <button class="btn">Добавить</button>
+                  <div class="cross">
+                    <img src="../static/images/cross.svg" alt="" />
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="btn-wraps">
-          <a href="/dashboard">
-            <button class="btn">Назад</button>
-          </a>
+          <button class="btn">Назад</button>
         </div>
       </div>
     </section>
 
-    <script>
-      (async () => {
-        var data, res;
-
-        const accessToken = localStorage.getItem("access_token");
-        if (!accessToken) {
-          window.location.href = "/login";
-          return;
-        }
-
-        const exercisesContainer = document.getElementById("exercises");
-        const workoutsContainer = document.getElementById("workouts");
-
-        ({ res, data } = await getAllExercises(accessToken));
-
-        if (res.status === 401) {
-          window.location.href = "/login";
-          return;
-        }
-
-        for (const exercise of data.exercises) {
-          if (exercise.id === "custom") {
-            continue;
-          }
-          const element = document.createElement("div");
-          element.className = "workout-card";
-          element.style.marginTop = "10px";
-          element.innerHTML = `
-            <h4>${exercise.name}</h4>
-              <img src="../static/assets/images/gradient-arrow.svg" alt="" />
-              <div class="exercise-popup-wraps">
-                <div class="exercise-pop-wrapper">
-                  <h4>${exercise.name}</h4>
-                  <div class="workout">
-                    <img src="../static/assets/images/squat.png" alt="" />
-                  </div>
-                  <div class="timer-count">
-                    <div class="plus-minus">
-                      <img src="../static/assets/images/minus.svg" alt="" />
-                    </div>
-                    <div class="timer-wraps">
-                      <span>0:10</span>
-                    </div>
-                    <div class="plus-minus">
-                      <img src="../static/assets/images/plus.svg" alt="" />
-                    </div>
-                  </div>
-                  <div class="flex align-center add-flex gap-20">
-                    <button class="btn" onclick="window.location.href = '/workouts/start?id=${exercise.id}&type=exercise'">
-                        Добавить
-                    </button>
-                    <div class="cross">
-                      <img src="../static/assets/images/cross.svg" alt="" />
-                    </div>
-                  </div>
-                </div>
-              </div>
-            `;
-          exercisesContainer.appendChild(element);
-        }
-
-        ({ res, data } = await getUserWorkouts(accessToken));
-        for (const workout of data.workouts) {
-          const element = document.createElement("div");
-          element.className = "workout-card";
-          element.style.marginTop = "10px";
-          element.innerHTML = `
-          <h4>${exercise.name}</h4>
-              <img src="../static/assets/images/gradient-arrow.svg" alt="" />
-              <div class="exercise-popup-wraps">
-                <div class="exercise-pop-wrapper">
-                  <h4>${workout.name}</h4>
-                  <div class="workout">
-                    <img src="../static/assets/images/squat.png" alt="" />
-                  </div>
-                  <div class="timer-count">
-                    <div class="plus-minus">
-                      <img src="../static/assets/images/minus.svg" alt="" />
-                    </div>
-                    <div class="timer-wraps">
-                      <span>0:10</span>
-                    </div>
-                    <div class="plus-minus">
-                      <img src="../static/assets/images/plus.svg" alt="" />
-                    </div>
-                  </div>
-                  <div class="flex align-center add-flex gap-20">
-                    <button class="btn" onclick="window.location.href = '/workouts/start?id=${workout.exercise.id}&type=workout'">
-                        Добавить
-                    </button>
-                    <div class="cross">
-                      <img src="../static/assets/images/cross.svg" alt="" />
-                    </div>
-                  </div>
-                </div>
-              </div>
-            `;
-          workoutsContainer.appendChild(element);
-        }
-
-        const workoutCards = document.querySelectorAll(".workout-card");
-
-        workoutCards.forEach((card) => {
-          card.addEventListener("click", () => {
-            const exercisePopupWrap = card.querySelector(
-              ".exercise-popup-wraps"
-            );
-            exercisePopupWrap.classList.add("active");
-          });
-        });
-
-        const crossButtons = document.querySelectorAll(".cross");
-
-        crossButtons.forEach((crossButton) => {
-          crossButton.addEventListener("click", (event) => {
-            const exercisePopupWrap = crossButton.closest(
-              ".exercise-popup-wraps"
-            );
-            exercisePopupWrap.classList.remove("active");
-            event.stopPropagation();
-          });
-        });
-      })();
-    </script>
-
-    <!-- WORKOUT PAGE START HERE -->
+    <script src="../static/js/workouts.js" defer></script>
   </body>
 </html>
