feat: workots page now shows the custom workouts

--- a/server/app/templates/dashboard.html
+++ b/server/app/templates/dashboard.html
@@ -97,7 +97,7 @@
           {% endfor %}
         </div>
         <div class="three-btn-wraps">
-          <a href="">
+          <a href="/workouts">
             <button class="btn">Выбрать другой уровень тренировки</button>
           </a>
           <a href="/workouts/new">
