--- a/server/app/templates/workouts.html
+++ b/server/app/templates/workouts.html
@@ -14,6 +14,10 @@
     <script src="../static/js/lib.js" type="text/javascript"></script>
   </head>
 
+  <script>
+    var workouts = {{ workouts|tojson }};
+  </script>
+
   <body>
     <!-- WORKOUT PAGE START HERE -->
     <section class="workout-page">
@@ -33,11 +37,8 @@
         </div>
         <div class="number-list-wrapper mt-45">
           <h3>Свои тренировки</h3>
-          <div class="workout-number-list">
-            <div class="workout-card">
-              <h4>Моя тренировка № 1</h4>
-              <img src="../static/images/gradient-arrow.svg" alt="" />
-            </div>
+          <div class="workout-number-list" id="custom-workout-list">
+            <!-- Custom Workouts reside here -->
           </div>
         </div>
         <div class="workout-name-wraps mt-60">
