feat: workout save if clicked the complete button

--- a/server/app/templates/workout-start.html
+++ b/server/app/templates/workout-start.html
@@ -69,7 +69,7 @@
               loop
             ></video>
           </div>
-          <button class="btn" id="download-btn">Завершить</button>
+          <button class="btn" id="complete-btn">Завершить</button>
         </div>
       </div>
     </section>
